# lattice-mcp

./: .env.eval.example  .gitignore  CLAUDE.md  PRD.md  README.md  lattice-mcp-plan.md  main.py  pyproject.toml  server.py  smoke_test.py
lattice/: db.py  ingest.py  llm.py  models.py  selection.py  synthesis.py  tools.py
lattice/eval/: PRIORITIES.md  README.md  debug_viewer.py  evaluate_qa.py  print_qa_metrics.py  print_retrieval_metrics.py  run_eval.py  run_parallel_eval.py  session_formatter.py
tests/: test_agents.py  test_db.py  test_llm.py  test_models.py
